@@ -965,6 +965,12 @@ Sigfunc *signal(int signo, Sigfunc * func);
 #define ap_select	select
 #endif
 
+#ifdef ULTRIX_BRAIN_DEATH
+#define ap_fdopen(d,m) fdopen((d), (char *)(m))
+#else
+#define ap_fdopen(d,m) fdopen((d), (m))
+#endif
+
 #ifndef ap_inet_addr
 #define ap_inet_addr inet_addr
 #endif
