@@ -636,6 +636,9 @@ int ap_proxy_cache_check(request_rec *r, char *url, struct cache_conf *conf,
 int ap_proxy_cache_update(struct cache_req *c, array_header *resp_hdrs,
 		       const int is_HTTP1, int nocache)
 {
+#ifdef ULTRIX_BRAIN_DEATH
+  extern char *mktemp(char *template);
+#endif 
     request_rec *r = c->req;
     char *p;
     int i;
